# ARKITEKT

./: .codemap  .gitignore  .windsurfrules  AGENTS.md  ARKITEKTLauncher.lua  ARKITEKT_Codex_Playbook_v5.md  ARKITEKT_Generic.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_FULL.md  CODE_REVIEW_COMPREHENSIVE_2025-11-26.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEPENDENCIES.md  DOCS_CONFIG_BEST_PRACTICES.md  FLICKERING_ANALYSIS_AND_PLAN.md  METRICS.json  MIGRATION_PLAN.md  MULTIBRANCH_PIPELINE.md  PROJECT_FLOW.md  PROJECT_STRUCTURE.txt  README.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  ReArkitekt_FLOW.md  System_Prompt_ARKITEKT_OnePager.md  apps_FLOW.md  arkitekt_FLOW.md  index.xml  lua_perf_guide.md  merge_fonts.py  merge_fonts_simple.py  reapack_FLOW.md  refactoring ideas  refactoring_templates.md
.github/workflows/: build-blocksampler.yml  build-drumblocks.yml  codex-pipeline.yml
ARKITEKT/: ARKITEKT.lua  ARK_Hub.lua  ARK_ItemPicker.lua  ARK_ItemPickerWindow.lua  ARK_MediaContainer.lua  ARK_MediaContainer_Copy.lua  ARK_MediaContainer_Create.lua  ARK_MediaContainer_Paste.lua  ARK_RegionPlaylist.lua  ARK_TemplateBrowser.lua  ARK_ThemeAdjuster.lua  debug_circular.lua  debug_namespace_explicit.lua  debug_namespace_with_path.lua  debug_simple.lua  loader.lua  test_namespace.lua
ARKITEKT/arkitekt/: arkit.lua  init.lua
ARKITEKT/docs/: API_DOCUMENTATION_GUIDE.md  DYNAMIC_THEMING_STATUS.md  LUALS_ANNOTATIONS_GUIDE.md  NAMESPACE.md  SECURITY.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_FINAL_VERIFICATION.md  WIDGET_REFACTOR_EXAMPLE.lua  WIDGET_REFACTOR_STRATEGY.md
ARKITEKT/examples/: namespace_demo.lua  namespace_full_demo.lua
ARKITEKT/hub/: hub.lua
ARKITEKT/rearkitekt/: arkit.lua
ARKITEKT/sandbox/: sandbox_7.lua  test_overlay_toolbar.lua
ARKITEKT/tests/: test_namespace.lua
ARKITEKT/tools/: bulk_migrate.sh  migrate.py  migrate_to_namespace.lua
BENCHMARKS/: BUTTON_OPTIMIZATION_2025-01.md  PRIMITIVES_STATUS.md  README.md
Documentation/: 2025-01-19_Framework_Consolidation.md  LUA_PERFORMANCE_GUIDE.md  README.md
Documentation/architecture/: README.md
FLOWS/: PROJECT_FLOW.md
FLOWS/features/: ARKITEKT_FLOW.md  COLORPALETTE_FLOW.md  ITEMPICKER_FLOW.md  REARKITEKT_FLOW.md  REGION_PLAYLIST_FLOW.md
IDEAS/: WINDOW_QOL.md
Region_Playlist/core/: selectors.lua  state.lua
Region_Playlist/storage/: persistence.lua
TODO/: API_MIGRATION.md  ARK_CONTEXT.md  BATCH_PROCESSOR.md  CALLABLE_WIDGETS.md  CONSTANT_ORGANIZATION.md  GRID_PINNED_SLOTS.md  GUI_REORGANIZATION.md  IMGUI_ALIGNMENT_ANALYSIS.md  IMGUI_API_COVERAGE.md  IMGUI_CENTRALIZATION.md  IMGUI_MODULE_PATTERN.md  ItemPickerFeatures.md  MODULARISATION.md  MidiGenerator.md  NAMING_STANDARDS.md  NITPICKS.md  OPTIMIZE_IMGUI_REFERENCES.md  PANEL_REFACTOR.md  PERFORMANCE.md  README.md  REORGANIZE_REFERENCE_MATERIALS.md  TAGGING_SERVICE.md  THEME_MANAGER_CLEANUP.md  TREEVIEW_REFACTOR.md  ThemeAdjuster_Refactor.md  additionnalnotes.md  theme-debug-overlay.md  theme-validation.md
TODO/01_HIGH/: ALIGNMENT_REFACTORING.md  PERFORMANCE_SWEEP.md  REFACTOR_ColorsModule.md  REFACTOR_ItemPicker.md
TODO/02_MEDIUM/: CLEANUP_ConstantOrganization.md  DOCS_Modularisation.md  FEATURE_MidiGenerator.md  FEATURE_SelectionNumbering.md  FEATURE_TaggingService.md  REFACTOR_ModalConsolidation.md
TODO/03_LOW/: CLEANUP_MigrationScript.md  CLEANUP_Nitpicks.md  DOCS_WhyArkitektAPI.md  FEATURE_IconLuaCats.md  RESEARCH_HybridAPI.md
TODO/API_MATCHING/: CHECKLIST.md  DECISIONS.md  FLAGS_TO_OPTS.md  GRID_REWORK.md  PANEL_REWORK.md  PHASING.md  PROGRESS.md  README.md  SCOPE.md  SHELL.md  WIDGET_SIGNATURES.md
TODO/HOT_RELOAD/: DESIGN.md  IMPLEMENTATION.md  README.md
TODO/Later/: EXTRACT_IMGUI_PATTERNS_SCRIPT.md
TODO/scriptRefacto/: ItemPicker.md  TemplateBrowser.md  ThemeAdjuster_Refactor.md
Utils/Python/: README.md  convert_theme_dsl_to_bytes.py  fix_bytes_conversion.py  hex_to_bytes.py  hexrgb.py  remove_dead_hex_imports.py  svg_to_lua.py
VSTs/BlockSampler/: ARCHITECTURE.md  CMakeLists.txt  FEATURES.md  FUTURE_IDEAS.md  README.md  REAPER_INTEGRATION.md  ROADMAP.md
VSTs/BlockSampler/Source/: Pad.cpp  Pad.h  Parameters.h  PluginProcessor.cpp  PluginProcessor.h
VSTs/BlockSampler/Tests/: PadTests.cpp  TestMain.cpp
VSTs/DrumBlocks/: ARCHITECTURE.md  CMakeLists.txt  FEATURES.md  README.md  REAPER_INTEGRATION.md  ROADMAP.md
apps/ColorPalette/: ARK_ColorPalette.lua
apps/Region_Playlist/: ARK_RegionPlaylist.lua
apps/demos/: demo.lua  demo2.lua  demo3.lua  demo_modal_overlay.lua  widget_demo.lua
arkitekt/: ARKITEKT.lua
arkitekt/app/: config.lua  runtime.lua  shell.lua  titlebar.lua  window.lua
arkitekt/core/: settings.lua
arkitekt/gui/: draw.lua  style.lua
arkitekt/reaper/: regions.lua  timing.lua
cookbook/: API_DESIGN_PHILOSOPHY.md  ARCHITECTURE.md  ARKCONTEXT.md  CONVENTIONS.md  DEPRECATED.md  GIT_WORKFLOW.md  LUA_PERFORMANCE_GUIDE.md  MIGRATION_PLANS.md  MODULARISATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTOR_PLAN.md  RENDERER_PATTERN.md  SCRIPT_LAYERS.md  SHORTCUTS.md  STORAGE.md  TESTING.md  THEME_MANAGER.md  TODO_GUIDE.md  WIDGETS.md
devkit/: ARK_DevKit.lua
devtools/: open_all_worktrees.bat  open_all_worktrees.py
devtools/groupy_config_manager/: main.py
devtools/vscode-imgui-color-picker/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json
devtools/worktree_manager/: main.py
docs/: INDEX.md
docs/guides/: DEBUGGING.md
docs/reference/: WIDGET_SELECTION.md
references/imgui/: README.md  (+1 more)
tools/: convert_all_draw_to_pascal.py  convert_ark_to_pascal.py  convert_quotes.py
(+1283 files in other folders)
